# sensorium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sensorium-context/: Cargo.toml  README.md
crates/sensorium-context-macos/: Cargo.toml  README.md
crates/sensorium-context-macos/src/: lib.rs  macos.rs
crates/sensorium-context-macos/tests/: observer.rs
crates/sensorium-context/src/: fs_observer.rs  lib.rs  manual_observer.rs  observer.rs
crates/sensorium-context/tests/: observers.rs
crates/sensorium-core/: Cargo.toml  README.md
crates/sensorium-core/src/: attention.rs  biometric.rs  entity.rs  error.rs  generation.rs  lib.rs  posture.rs  primitive.rs  privacy.rs  provenance.rs  ring.rs  sensor.rs  state.rs  stream.rs  time.rs  token.rs  workspace.rs
crates/sensorium-core/tests/: calibration_propagation.rs  entity_validation.rs  primitive_token_taxonomy.rs  privacy_markers.rs  safety_asymmetry.rs  serialization.rs  snapshot_identity.rs  streaming.rs  workspace_substrate.rs
crates/sensorium-voice/: Cargo.toml  README.md
crates/sensorium-voice/src/: audio.rs  backend.rs  config.rs  error.rs  lib.rs  parakeet.rs  session.rs  token.rs  vad.rs
crates/sensorium-voice/tests/: audio_pipeline.rs  parakeet_inference.rs  session.rs  streaming_session.rs  vad_driven_session.rs  vad_gate.rs
docs/: MIL-PROJECT-UPDATES.md
docs/specs/: 2026-05-13-mil-roadmap-competitive-landscape.md
