[package]
name = "sensorium-context-macos"
description = "macOS workspace observer for the Sensorium substrate. Polls NSWorkspace for the frontmost application and updates a shared WorkspaceContext in the background. Step #15 of the MIL Tier 3 build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sensorium-core = { workspace = true }
sensorium-context = { workspace = true }
thiserror = { workspace = true }

# macOS-only framework bindings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[lints.rust]
missing_docs = "warn"
# AppKit / objc2 require unsafe blocks even though most NSWorkspace
# calls are documented as safe. We accept it crate-wide and document
# each unsafe block at the call site.
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
