[package]
name = "sensorium-context"
description = "Workspace observer providers for the Sensorium substrate. Defines the Observer trait, a programmatic ManualObserver, and an FsObserver that watches filesystem changes via the notify crate. Phase 1 deliverable of the MIL build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sensorium-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
