[package]
name = "sensorium-core"
description = "Sensorium types-only foundation: workspace context, primitive-token taxonomy, sensor metadata, privacy markers. The exteroceptive substrate of the Life Agent OS, input layer of MIL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
serde_test = { workspace = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Project style allowances — don't fight the type system or noise the diff.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
# Doc prose in this crate is heavy on prose references (§10.3, serde_json, etc.).
# Backticking every word would harm readability without adding signal.
doc_markdown = "allow"
