[package]
name = "sensorium-voice"
description = "Voice-input substrate for the Sensorium / MIL stack. Streams microphone audio through Silero V5 voice activity detection and NVIDIA Parakeet TDT (EOU streaming variant) on-device on Apple Silicon, emitting PrimitiveToken { kind: Predication } tokens with full provenance. Step #17 of the MIL Tier 3 build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sensorium-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Audio path (feature-gated so default builds stay dep-light).
# - `cpal` is the canonical Rust cross-platform audio crate; CoreAudio
#   on macOS, ALSA on Linux. Captures 16kHz f32 mono.
# - `ringbuf` is a lock-free SPSC ring between the cpal callback
#   (real-time audio thread) and the inference thread.
# - `voice_activity_detector` wraps Silero VAD V5 via ONNX Runtime;
#   ~1ms per 30ms chunk on CPU.
cpal = { version = "0.17", optional = true }
ringbuf = { version = "0.5", optional = true }
voice_activity_detector = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Audio capture + VAD layer. Builds the cpal mic-capture pipeline,
# the Silero V5 VAD gate, and the AudioCapture struct. Enables
# `VoiceSession::start_audio`. Mock STT backend works against real
# microphone audio when this is enabled (proves the wiring before
# Parakeet ships).
audio = ["dep:cpal", "dep:ringbuf", "dep:voice_activity_detector"]
# Future: real Parakeet TDT EOU streaming inference via parakeet-rs +
# ort + hf-hub. `parakeet` implies `audio` because Parakeet needs the
# audio pipeline to feed it.
parakeet = ["audio"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
