[package]
name = "sensorium-voice"
description = "Voice-input substrate for the Sensorium / MIL stack. Streams microphone audio through an energy-RMS voice activity detector and NVIDIA Parakeet TDT (EOU streaming variant) on-device on Apple Silicon, emitting PrimitiveToken { kind: Predication } tokens with full provenance. Step #17 of the MIL Tier 3 build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sensorium-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Audio path (feature-gated so default builds stay dep-light).
# - `cpal` is the canonical Rust cross-platform audio crate; CoreAudio
#   on macOS, ALSA on Linux. Captures 16kHz f32 mono.
# - `ringbuf` is a lock-free SPSC ring between the cpal callback
#   (real-time audio thread) and the inference thread.
cpal = { version = "0.17", optional = true }
ringbuf = { version = "0.5", optional = true }

# Parakeet path (`feature = "parakeet"`).
# - parakeet-rs 0.3.x wraps NVIDIA Parakeet via the ort Rust ONNX
#   Runtime; EOU variant streams at 160ms chunks.
# - hf-hub bootstraps the ~150MB model weights on first run.
#
# NOTE: parakeet-rs ^0.3 transitively pins `ort ^2.0.0-rc.12`, which
# is incompatible with `voice_activity_detector` 0.2.x (`=2.0.0-rc.10`).
# Cargo resolves a single ort version per workspace, so the two crates
# can't coexist as deps even when feature-gated. We therefore ship
# only `EnergyVad` (zero deps) for VAD; downstream callers who need
# Silero V5 specifically can wire it themselves once upstream aligns.
parakeet-rs = { version = "0.3", optional = true }
hf-hub = { version = "0.4", optional = true, features = ["ureq"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Audio capture path. cpal mic capture + ringbuf SPSC + the
# zero-dep energy-RMS VAD (`EnergyVad`). Sufficient for explicit
# hold-to-talk / one-utterance-at-a-time voice input.
audio = ["dep:cpal", "dep:ringbuf"]
# Real Parakeet TDT EOU streaming inference via parakeet-rs + ort +
# hf-hub. Implies `audio`.
parakeet = ["audio", "dep:parakeet-rs", "dep:hf-hub"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
